--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:fxtentacle/MGTwitterEngine.git
 [submodule "SSKeyChain"]
 	path = SSKeyChain
-	url = http://github.com/samsoffes/sskeychain.git
+	url = git@github.com:fxtentacle/sskeychain.git
